--- a/src/app/main/layout/reports/shared/service-report/service-report.component.html
+++ b/src/app/main/layout/reports/shared/service-report/service-report.component.html
@@ -230,17 +230,6 @@
                                         <td>
                                             <span *ngIf="isOnlineBooking(booking)">{{booking.netAmt | number}}</span>
                                             <span *ngIf="isCashBooking(booking)">
-<!--                                                <button type="button" style="padding: 5px 7px;"-->
-<!--                                                        class="action-icon-style waves-effect waves-blue edit-user-button"-->
-<!--                                                        title="Update NET"-->
-<!--                                                        [ngbPopover]="editableFields"-->
-<!--                                                        trigger="'mouseleave'"-->
-<!--                                                        placement="right" [autoClose]="false"-->
-<!--                                                        #q="ngbPopover"-->
-<!--                                                        (close)="openPop(q)">-->
-<!--                                                        <i class="fa fa-pencil fa-1x" aria-hidden="true"></i>-->
-<!--                                                    </button>-->
-<!--                                                <ng-template #editableFields>-->
                                                     <table class="table table-hover table-bordered"
                                                            style="margin-bottom: 0 !important;">
                                                         <tr>
@@ -270,17 +259,8 @@
                                                                   <i class="fa fa-trash"></i>
                                                               </a>
                                                             </td>
-<!--                                                            <td *ngIf="!booking.index">-->
-<!--                                                                <button type="button" style="padding: 0 5px;"-->
-<!--                                                                        class="action-icon-style waves-effect waves-blue edit-user-button"-->
-<!--                                                                        title="Close"-->
-<!--                                                                        (click)="q.close()">-->
-<!--                                                        <i class="fa fa-close fa-1x" aria-hidden="true"></i>-->
-<!--                                                    </button>-->
-<!--                                                            </td>-->
                                                         </tr>
                                                     </table>
-<!--                                                </ng-template>-->
                                             </span>
                                         </td>
                                         <td>{{booking.originalCost | number}}</td>
@@ -313,7 +293,7 @@
                                         <tr>
                                             <td>Mileage:</td>
                                             <td>
-                                                <input [(ngModel)]="serviceReportDetails.milage"
+                                                <input [(ngModel)]="serviceReportDetails.milage" type="text"
                                                        class="form-control form-control-sm"
                                                        [disabled]="isDisabled()" [ngModelOptions]="{standalone: true}"/>
                                             </td>
@@ -323,7 +303,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h5>Additional Income</h5>
+                                    <h5>Additional Income here</h5>
                                     <table class="table table-bordered table-condensed table-hover mt-2">
                                         <tr>
                                             <td>Luggage</td>
