Update cash balance on due

--- a/src/app/main/layout/reports/shared/service-report/service-report.component.html
+++ b/src/app/main/layout/reports/shared/service-report/service-report.component.html
@@ -303,7 +303,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h5>Additional Income here</h5>
+                                    <h5>Additional Income</h5>
                                     <table class="table table-bordered table-condensed table-hover mt-2">
                                         <tr>
                                             <td>Luggage</td>
