--- a/src/app/main/layout/reports/shared/service-report/service-report.component.html
+++ b/src/app/main/layout/reports/shared/service-report/service-report.component.html
@@ -8,7 +8,7 @@
         </div>
         <ul class="app-breadcrumb breadcrumb">
             <li class="breadcrumb-item"><span class="fa fa-home fa-lg"></span></li>
-            <li class="breadcrumb-item"><span class="breadcrumb-item-router"><a class="cus-a">Service Reports</a></span></li>
+            <li class="breadcrumb-item"><span class="breadcrumb-item-router"><a class="cus-a" (click)="goBack()">Service Reports</a></span></li>
             <li class="breadcrumb-item"><span class="breadcrumb-item-router">Service Report</span></li>
         </ul>
     </div>
